<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="top"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/discovery" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meetingshiva"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold"/>

            <HorizontalScrollView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/haridwarcard"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="20dp"
                        app:cardCornerRadius="50dp"
                        app:cardElevation="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="225dp"
                                android:scaleType="fitXY"
                                app:srcCompat="@drawable/haridwar" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="75dp"
                                android:gravity="center_horizontal|center_vertical"
                                android:text="@string/haridwar"
                                android:textColor="@color/black"
                                android:textSize="34sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/katarmalcard"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="20dp"
                        app:cardCornerRadius="50dp"
                        app:cardElevation="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="225dp"
                                android:scaleType="fitXY"
                                app:srcCompat="@drawable/katarmal" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="75dp"
                                android:gravity="center_horizontal|center_vertical"
                                android:text="@string/katarmal"
                                android:textColor="@color/black"
                                android:textSize="34sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/baijnathcard"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="20dp"
                        app:cardCornerRadius="50dp"
                        app:cardElevation="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="225dp"
                                android:scaleType="fitXY"
                                app:srcCompat="@drawable/baijnath" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="75dp"
                                android:gravity="center_horizontal|center_vertical"
                                android:text="@string/baijnath"
                                android:textColor="@color/black"
                                android:textSize="34sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/pbtcard"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="20dp"
                        app:cardCornerRadius="50dp"
                        app:cardElevation="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="225dp"
                                android:scaleType="fitXY"
                                app:srcCompat="@drawable/pbt" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="75dp"
                                android:gravity="center_horizontal|center_vertical"
                                android:text="@string/pbt"
                                android:textColor="@color/black"
                                android:textSize="30sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/binsarcard"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="20dp"
                        app:cardCornerRadius="50dp"
                        app:cardElevation="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="225dp"
                                android:scaleType="fitXY"
                                app:srcCompat="@drawable/binsar" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="75dp"
                                android:gravity="center_horizontal|center_vertical"
                                android:text="@string/binsar"
                                android:textColor="@color/black"
                                android:textSize="30sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/jageshwarcard"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="20dp"
                        app:cardCornerRadius="50dp"
                        app:cardElevation="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="225dp"
                                android:scaleType="fitXY"
                                app:srcCompat="@drawable/jageshwar" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="75dp"
                                android:gravity="center_horizontal|center_vertical"
                                android:text="@string/jageshwar"
                                android:textColor="@color/black"
                                android:textSize="30sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/dandeshwarcard"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="20dp"
                        app:cardCornerRadius="50dp"
                        app:cardElevation="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="225dp"
                                android:scaleType="fitXY"
                                app:srcCompat="@drawable/dandeshwar" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="75dp"
                                android:gravity="center_horizontal|center_vertical"
                                android:text="@string/dandeshwar"
                                android:textColor="@color/black"
                                android:textSize="30sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/baleshwarcard"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="20dp"
                        app:cardCornerRadius="50dp"
                        app:cardElevation="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="225dp"
                                android:scaleType="fitXY"
                                app:srcCompat="@drawable/baleshwar" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="75dp"
                                android:gravity="center_horizontal|center_vertical"
                                android:text="@string/baleshwar"
                                android:textColor="@color/black"
                                android:textSize="30sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forts"
                android:layout_marginTop="40dp"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold"/>

            <HorizontalScrollView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/mallacard"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="20dp"
                        app:cardCornerRadius="50dp"
                        app:cardElevation="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="225dp"
                                android:scaleType="fitXY"
                                app:srcCompat="@drawable/malla" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="75dp"
                                android:gravity="center_horizontal|center_vertical"
                                android:text="@string/malla"
                                android:textColor="@color/black"
                                android:textSize="30sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/banasurcard"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="20dp"
                        app:cardCornerRadius="50dp"
                        app:cardElevation="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="225dp"
                                android:scaleType="fitXY"
                                app:srcCompat="@drawable/banasur" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="75dp"
                                android:gravity="center_horizontal|center_vertical"
                                android:text="@string/banasur"
                                android:textColor="@color/black"
                                android:textSize="30sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/rajbhungacard"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="20dp"
                        app:cardCornerRadius="50dp"
                        app:cardElevation="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="225dp"
                                android:scaleType="fitXY"
                                app:srcCompat="@drawable/rajbhunga" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="75dp"
                                android:gravity="center_horizontal|center_vertical"
                                android:text="@string/banasur"
                                android:textColor="@color/black"
                                android:textSize="30sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </HorizontalScrollView>



        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>